fix on badge font size on mobile view

--- a/src/components/Layout/HeaderCartButton.module.css
+++ b/src/components/Layout/HeaderCartButton.module.css
@@ -111,7 +111,7 @@
     right: -6px;
     height: 20px;
     width: 20px;
-    font-size: 10px;
+    font-size: 9px;
   }
 }
 
@@ -133,7 +133,7 @@
   .badge {
     top: -5px;
     right: -7px;
-    font-size: 10px;
+    font-size: 9px;
     height: 20px;
     width: 20px;
   }
